--- a/proyectos-jeef/index.html
+++ b/proyectos-jeef/index.html
@@ -45,6 +45,10 @@
               <p id="texto">link de calculadora con cuatro opcines</p></div></td>
              <td><a href="./tarea/index.html">link page motos</a></td>
          </tr>
+             <td> <div class="caja"><img  id="size"  src="./Captura de pantalla 2025-07-22 195944.png" alt="">
+              <p id="texto">Link de la HDV page</p></div></td>
+             <td><a href="./tarea.alex/project.html">link page HDV</a></td>
+         </tr>
        </tbody>
      </table>
 
@@ -55,3 +59,4 @@
 
 </body>
 </html>
+
