--- a/proyectos-jeef/tarea.alex/page.html
+++ b/proyectos-jeef/tarea.alex/page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<button onclick="volver()">Volver</button>
+<button id="back"  onclick="volver()">  <i class="fa-solid fa-arrow-left"></i></button>
 <div id="info"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -44,11 +44,13 @@
             <figcaption id="pais">${itemActual.pais}</figcaption>
           </figure> 
 
-           <div class="botones">
-            <button onclick="mostrarInfo(1)">Datos interesantes</button>
-            <button onclick="mostrarInfo(2)">Coordenadas</button>
-            <button onclick="mostrarInfo(3)">Actividades</button>
-          </div>
+      
+
+<div class="botones">
+  <button onclick="mostrarInfo(1)"><i class="fas fa-lightbulb"></i> Datos interesantes</button>
+  <button onclick="mostrarInfo(2)"> <i class="fas fa-map-marker-alt"></i> Coordenadas</button>
+  <button onclick="mostrarInfo(3)"><i class="fas fa-tasks"></i> Actividades</button>
+</div>
 
           <div id="resultado"></div>
         </div>
@@ -63,28 +65,53 @@
 
     const resultado = document.getElementById("resultado");
 
-    if (opcion === 1) {
-      resultado.innerHTML = `
-        <p id="text">
-          DATOS INTERESANTES: <br>
-          ${datosHtml}
-        </p>`;
-    } 
+ if (opcion === 1) {
+  if (itemActual.datosInteresantes && itemActual.datosInteresantes.length > 0) {
+    resultado.innerHTML = `
+      <ul id="datos">
+        ${itemActual.datosInteresantes.map(dato => `
+          <li>
+            <strong>${dato.titulo}</strong>
+            <ul class="sub-lista">
+              <li>${dato.valor}</li>
+            </ul>
+          </li>
+        `).join("")}
+      </ul>
+    `;
+  } 
+}
     else if (opcion === 2) {
       resultado.innerHTML = `
-        <p>Latitud: ${itemActual.coordenadas.latitud} || Longitud: ${itemActual.coordenadas.longitud}</p>
-        <iframe
+<div class="coordenas">
+<h3>Coordenadas:</h3>
+        <p>Latitud: ${itemActual.coordenadas.latitud}</p>
+<p> Longitud: ${itemActual.coordenadas.longitud}</p>  
+</div>      
+<iframe
           src="https://www.google.com/maps?q=${itemActual.coordenadas.latitud},${itemActual.coordenadas.longitud}&hl=es&z=14&output=embed">
         </iframe>
       `;
     } 
-    else if (opcion === 3) {
-      resultado.innerHTML = `<p>${itemActual.actividadesRecomendadas || 'Sin descripción'}</p>`;
-    }
+
+else if (opcion === 3) {
+  if (itemActual.actividadesRecomendadas && itemActual.actividadesRecomendadas.length > 0) {
+    resultado.innerHTML = `
+      <ul id="act">
+        ${itemActual.actividadesRecomendadas.map(a => `
+          <li><strong>${a}</strong></li>
+        `).join("")}
+      </ul>`;
+  } else {
+    resultado.innerHTML = `<p id="act">Sin descripción</p>`;
   }
+}
+ 
+}
+
 
   function volver() {
-    window.location.href = 'project.html';
+    window.location.href = 'index.html';
   }
 </script>
 
