--- a/proyectos-jeef/index.html
+++ b/proyectos-jeef/index.html
@@ -43,7 +43,7 @@
           
             <td> <div class="caja"><img  id="size"  src="" alt="page calculadorda">
               <p id="texto">link de calculadora con cuatro opcines</p></div></td>
-             <td><a href="./tarea/index.html">link page motos</a></td>
+             <td><a href="./tarea/index.html">link para pagina sobre calculadora básica</a></td>
          </tr>
              <td> <div class="caja"><img  id="size"  src="./Captura de pantalla 2025-07-22 195944.png" alt="">
               <p id="texto">Link de la HDV page</p></div></td>
@@ -59,4 +59,5 @@
 
 </body>
 </html>
+
 
