--- a/proyectos-jeef/index.html
+++ b/proyectos-jeef/index.html
@@ -41,13 +41,13 @@
 
             <tr class="estilos">
           
-            <td> <div class="caja"><img  id="size"  src="" alt="page calculadorda">
+            <td> <div class="caja"><img  id="size"  src="./Captura.calculadora.PNG" alt="page calculadorda">
               <p id="texto">link de calculadora con cuatro opcines</p></div></td>
-             <td><a href="./tarea/index.html">link para pagina sobre calculadora básica</a></td>
+             <td><a href="./tarea/index.html">link página calculadora</a></td>
          </tr>
-             <td> <div class="caja"><img  id="size"  src="./Captura de pantalla 2025-07-22 195944.png" alt="">
-              <p id="texto">Link de la HDV page</p></div></td>
-             <td><a href="./tarea.alex/project.html">link page HDV</a></td>
+             <td> <div class="caja"><img  id="size"  src="./Captura.lugaresdelmundo.PNG" alt="">
+              <p id="texto">Link pagina dinámica con los lugares del mundo</p></div></td>
+             <td><a href="./tarea.alex/project.html">link página PlaceWorld</a></td>
          </tr>
        </tbody>
      </table>
@@ -59,5 +59,6 @@
 
 </body>
 </html>
+
 
 
