--- a/proyectos-jeef/index.html
+++ b/proyectos-jeef/index.html
@@ -45,6 +45,8 @@
               <p id="texto">link de calculadora con cuatro opcines</p></div></td>
              <td><a href="./tarea/index.html">link página calculadora</a></td>
          </tr>
+           
+                 <tr class="estilos">
              <td> <div class="caja"><img  id="size"  src="./Captura.lugaresdelmundo.PNG" alt="">
               <p id="texto">Link pagina dinámica con los lugares del mundo</p></div></td>
              <td><a href="./tarea.alex/project.html">link página PlaceWorld</a></td>
@@ -59,6 +61,7 @@
 
 </body>
 </html>
+
 
 
 
