--- a/proyectos-jeef/tarea.alex/page.html
+++ b/proyectos-jeef/tarea.alex/page.html
@@ -111,10 +111,11 @@ else if (opcion === 3) {
 
 
   function volver() {
-    window.location.href = 'index.html';
+    window.location.href = 'project.html';
   }
 </script>
 
 
 </body>
 </html>
+
