--- a/proyectos-jeef/index.html
+++ b/proyectos-jeef/index.html
@@ -49,8 +49,34 @@
                  <tr class="estilos">
              <td> <div class="caja"><img  id="size"  src="./Captura.lugaresdelmundo.PNG" alt="">
               <p id="texto">Link pagina dinámica con los lugares del mundo</p></div></td>
-             <td class="link"><a href="./tarea.alex/project.html">link página PlaceWorld</a></td>
+             <td class="link"><a href="./tarea.alex(1)/tarea.alex/project.html">link página PlaceWorld</a></td>
          </tr>
+
+           <tr class="estilos">
+             <td> <div class="caja"><img  id="size"  src="./Captura.mesas.PNG" alt="">
+              <p id="texto">Link pagina software mesas de restaurante</p></div></td>
+             <td class="link"><a href="./Sofware-Mesas/index.html.html">Sofware mesas</a></td>
+         </tr>
+
+
+           <tr class="estilos">
+             <td> <div class="caja"><img  id="size"  src="./captura.carros.PNG" alt="">
+              <p id="texto">Link proyecto intro de juego</p></div></td>
+             <td class="link"><a href="./proyect-play/index.html">link  intro juego of cars</a></td>
+         </tr>
+
+             <tr class="estilos">
+             <td> <div class="caja"><img  id="size"  src="./https://thumbs.dreamstime.com/b/icono-del-carrito-de-compras-para-aplicaciones-y-sitios-web-208663690.jpg" alt="">
+              <p id="texto">Link proyecto carrito de compra</p></div></td>
+             <td class="link"><a href="carrito-compra-ruby.vercel.app">link  intro juego of cars</a></td>
+         </tr>
+
+              <tr class="estilos">
+             <td> <div class="caja"><img  id="size"  src="./https://thumbs.dreamstime.com/b/icono-del-carrito-de-compras-para-aplicaciones-y-sitios-web-208663690.jpg" alt="">
+              <p id="texto">Link proyecto carrito de compra</p></div></td>
+             <td class="link"><a href="carrito-compra-ruby.vercel.app">link  intro juego of cars</a></td>
+         </tr>
+
        </tbody>
      </table>
 
@@ -61,6 +87,24 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
